--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.19.3",
     "postcss-loader": "^2.0.9",
     "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "vue": "^2.5.9",
     "vue-axios": "^2.0.2",
     "vue-loader": "^13.5.0",
