--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.4",
     "log4js": "^2.3.12",
     "moment": "^2.19.3",
+    "mysql": "^2.15.0",
     "postcss-loader": "^2.0.9",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
