--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.19.3",
     "mysql": "^2.15.0",
     "postcss-loader": "^2.0.9",
+    "silly-datetime": "^0.1.2",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "vue": "^2.5.9",
